--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
   <header>
     <nav class="menu">
       <ul id="fpMenu">
+        <li data-menuanchor="home" class="menu-item"><a href="#home">Accueil</a></li>
         <li data-menuanchor="artistes" class="menu-item"><a href="#artistes">Artistes</a></li>
         <li data-menuanchor="animations" class="menu-item"><a href="#animations">Animations</a></li>
-        <li data-menuanchor="diner" class="menu-item"><a href="#diner">Dîner</a></li>
         <li data-menuanchor="billeterie" class="menu-item"><a href="#billeterie">Billetterie</a></li>
-        <li data-menuanchor="partenaires" class="menu-item"><a href="#partenaires">Partenaires</a></li>
         <li data-menuanchor="faq" class="menu-item"><a href="#faq">FAQS</a></li>
       </ul>
     </nav>
@@ -135,14 +134,6 @@
       </div>
       <!-- ./Animations -->
 
-      <!-- Dîner -->
-      <div class="section fp-auto-height" data-anchor="diner">
-        <div class="page-content">
-
-        </div>
-      </div>
-      <!-- ./Dîner -->
-
       <!-- Billeterie -->
       <div id="section-billetterie" class="section" data-anchor="billeterie">
         <div class="page-content">
@@ -178,14 +169,6 @@
         </div>
       </div>
       <!-- ./Billeterie -->
-
-      <!-- Partenaires -->
-      <div class="section fp-auto-height" data-anchor="partenaires">
-        <div class="page-content">
-
-        </div>
-      </div>
-      <!-- ./Partenaires -->
 
       <!-- FAQS -->
       <div id="section-faq" class="section accent-gradient fp-auto-height" data-anchor="faq">
@@ -268,8 +251,8 @@
   <!-- Scripts -->
   <!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
   <script type="text/javascript" src="js/vendors/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="bower_components/fullpage.js/vendors/scrolloverflow.min.js"></script>
-  <script type="text/javascript" src="bower_components/fullpage.js/dist/jquery.fullpage.min.js"></script>
+  <script type="text/javascript" src="js/vendors/scrolloverflow.min.js"></script>
+  <script type="text/javascript" src="js/vendors/jquery.fullpage.min.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
         $('#fullpage').fullpage({
