Fetched common code & dependencies with master

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
   <!-- Scripts -->
   <!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> -->
   <script type="text/javascript" src="js/vendors/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="bower_components/fullpage.js/vendors/scrolloverflow.min.js"></script>
-  <script type="text/javascript" src="bower_components/fullpage.js/dist/jquery.fullpage.min.js"></script>
+  <script type="text/javascript" src="js/vendors/scrolloverflow.min.js"></script>
+  <script type="text/javascript" src="js/vendors/jquery.fullpage.min.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
         $('#fullpage').fullpage({
