Add C.Willsman logo + responsive artists & date

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="page-content">
           <div class="flex-ctn vertical">
             <div class="flex">
-              <span class="artiste">Chris Willsman</span>
+              <div class="logo-willsman"></div>
             </div>
             <div class="flex">
               <span class="artiste naxxos">NAXXOS</span>
