Fix wrong prevente 27€ section

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
               <br><sub>*Billets non échangeables, <br> non remboursables.</sub>
             </p>
             <p class="flex-3">
-              PREVENTE : 27 €
+              SUR PLACE : 27 €
               <br>
-              <br>> sur place
-              <br>> en ligne*
+              <br>> le soir même
+              <br>> achat : 18h-22h
             </p>
             <p class="flex-3">
               ALUMNI : 15 €  <sub>au lieu de 22 €</sub>
