Add 'navettes' details & price

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li data-menuanchor="artistes" class="menu-item"><a href="#artistes">Artistes</a></li>
         <li data-menuanchor="animations" class="menu-item"><a href="#animations">Animations</a></li>
         <li data-menuanchor="billeterie" class="menu-item"><a href="#billeterie">Billetterie</a></li>
-        <li data-menuanchor="faq" class="menu-item"><a href="#faq">FAQS</a></li>
+        <li data-menuanchor="faq" class="menu-item"><a href="#faq">Infos utiles</a></li>
       </ul>
     </nav>
   </header>
@@ -145,7 +145,10 @@
               SUR PLACE : 27 €
               <br>
               <br>> le soir même
-              <br>> achat : 18h-22h
+              <br>> achat : 19h-03h
+              <br>
+              <br>
+              <br><a href="#faq">Navettes disponibles</a>
             </p>
             <p class="flex-3">
               ALUMNI : 15 €  <sub>au lieu de 22 €</sub>
@@ -199,9 +202,10 @@
               <h4 class="title">Comment rentrer</h4>
               <p class="description">
                 SYSTEME DE NAVETTES
-                <br>> 2h30
-                <br>> 3h30
-                <br>> 4h30
+                <br>> 3h00
+                <br>> 4h00
+                <br>> 5h00
+                <br><b>Prix : 2€</b>
                 <br>En direction de Centrale/Audencia et centre-ville (Commerce).
                 <br>
                 <br>CO-VOITURAGE
@@ -221,7 +225,7 @@
                 <br>> contant@galadesmines.com
                 <br>
                 <br>RESEAUX SOCIAUX
-                <br>> Facebook
+                <br>> <a href="//www.facebook.com/GalaDesMines2016">Facebook</a>
               </p>
             </div>
           </div>
