Compile & minified CSS + Lazy load background

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes" />
   <title>Gala des Mines de Nantes - Edition 2016</title>
 
-  <link rel="stylesheet" type="text/css" href="css/reset.css">
+<!--   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/fullpage.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/flex.css">
+  <link rel="stylesheet" type="text/css" href="css/flex.css"> -->
+  <link rel="stylesheet" type="text/css" href="css/styles.min.css">
 
   <style type="text/css">
     body {
@@ -266,6 +267,8 @@
           verticalCentered: true,
           fixedElements: 'header'
         });
+
+        $($('.fullpage-container')[0]).css('background-image', 'url(\'img/background.jpg\')');
     });
   </script>
 </body>
