Fix navette departure and arrival locations

--- a/index.html
+++ b/index.html
@@ -203,11 +203,10 @@
               <h4 class="title">Comment rentrer</h4>
               <p class="description">
                 SYSTEME DE NAVETTES
-                <br>> 3h00
-                <br>> 4h00
-                <br>> 5h00
-                <br><b>Prix : 2€</b>
-                <br>En direction de Centrale/Audencia et centre-ville (Commerce).
+                <br>> 3h / 4h / 5h
+                <br>> <b>Prix : 2€</b>
+                <br>Arrêts Centrale-Audencia et Foch-Cathédrale.
+                <br>Départ : Ecole des Mines.
                 <br>
                 <br>CO-VOITURAGE
                 <br>> blablacar.fr
@@ -223,7 +222,7 @@
               <p class="description">
                 GALA MINES NANTES 2016
                 <br>> 4 rue Alfred Kastler, 44300 Nantes, France.
-                <br>> contant@galadesmines.com
+                <br>> contact@galadesmines.com
                 <br>
                 <br>RESEAUX SOCIAUX
                 <br>> <a href="//www.facebook.com/GalaDesMines2016">Facebook</a>
