Fix responsive date

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="logo-container">
             <div class="logo-emn"></div>
           </div>
-          <div class="date-container">
+          <div class="date-container flex-0">
             <div class="date">
               <div class="date-item day-container"><div class="day">25</div></div>
               <div class="date-item month-container"><div class="month">novembre</div></div>
