Fix responsive issues between Firefox/Chrome

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes" />
   <title>Gala des Mines de Nantes - Edition 2016</title>
 
-<!--   <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/fullpage.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/flex.css"> -->
@@ -69,16 +69,14 @@
       <!-- Artistes -->
       <div id="section-artistes" class="section fp-auto-height" data-anchor="artistes">
         <div class="overlay"></div>
-        <div class="page-content">
-          <div class="flex-ctn vertical">
-            <div class="flex">
-              <div class="logo-willsman"></div>
-            </div>
-            <div class="flex">
-              <span class="artiste naxxos">NAXXOS</span>
-              <span class="artiste-separator accent-gradient"></span>
-              <span class="artiste nyx">NYX</span>
-            </div>
+        <div class="page-content flex-ctn vertical">
+          <div class="flex">
+            <div class="logo-willsman"></div>
+          </div>
+          <div class="flex">
+            <span class="artiste naxxos">NAXXOS</span>
+            <span class="artiste-separator accent-gradient"></span>
+            <span class="artiste nyx">NYX</span>
           </div>
         </div>
       </div>
