Few fixes by miss com (Léa)

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="card-container pompom">
             <div class="card">
               <span class="card-title">Show pompom</span>
-              <p class="card-description">Polytech, Centrale et les Mines s'affronteront dans une battle où la victoire sera attribuée à l'applaudimètre. Venez nombreux pour élire vos préférées !</p>
+              <p class="card-description">Polytech, l'ESB et les Mines s'affronteront dans une battle où la victoire sera attribuée à l'applaudimètre. Venez nombreux pour élire vos préférées !</p>
             </div>
           </div>
           <div class="card-container massages">
@@ -118,7 +118,7 @@
           <div class="card-container cabaret">
             <div class="card">
               <span class="card-title">Cabaret véto</span>
-              <p class="card-description">Après leur succès à Chantrival, le Cabaret Véto revient sur les planches du Gala. Ne manquez pas ce show sensuel &amp; rythmé !</p>
+              <p class="card-description">Après leur succès au Chantrival, le Cabaret Véto revient sur les planches du Gala. Ne manquez pas ce show sensuel &amp; rythmé !</p>
             </div>
           </div>
         </div>
