Added wonderbox link + rules

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
         <div class="acheter-container">
           <a href="https://studeal.fr/evenements/gala-des-mines-2016-1_354" class="acheter">Acheter en ligne</a>
         </div>
+        <div class="wonderbox-container">
+          <a href="./Jeu_Wonderbox_reglement.pdf" class="wonderbox">Jouer au jeu Wonderbox</a>
+        </div>
       </div>
     </div>
     <!-- ./Billeterie -->
