Add Tickets Conso/Bracelet + Avenir Sante/Croix Rouge

--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
     <div id="billetterie" class="section">
       <div class="page-content">
         <!--<div class="red-square"></div>-->
-        <h2 class="title">Billetterie</h2>
+        <div class="title-container">
+          <h2 class="title">Billetterie</h2>
+          <p class="subtitle">Tickets conso + Bracelets conso</p>
+        </div>
         <div class="description flex-ctn">
           <p class="flex-3">
             PREVENTE : 23 €
@@ -198,10 +201,11 @@
             <p class="description">
               L'organisation se réserve le droit d'entrée.
               <br>Entrée interdite aux moins de 18 ans.
-              <br>
               <br>Vous devez être en possession d'une pièce d'identité officielle.
               <br>
               <br>Tout comportement jugé violent ou inapproprié entrainera l'exclusion définitive de la soirée.
+              <br>
+              <br><a href="http://www.avenir-sante.com/">Avenir Santé</a> - <a href="http://www.avenir-sante.com/">Croix Rouge</a>
             </p>
            </div>
         </div>
@@ -209,9 +213,9 @@
           <div class="item">
             <h4 class="title">Comment rentrer</h4>
             <p class="description">
-              SYSTEME DE NAVETTES
+              <u>SYSTEME DE NAVETTES</u>
               <br>> 3h / 4h / 5h
-              <br>> <b>Prix : 2€</b>
+              <br>> <u><b>Prix : 2€</b></u>
               <br>Arrêts Centrale-Audencia et Foch-Cathédrale.
               <br>Départ : Ecole des Mines.
               <br>
@@ -231,8 +235,8 @@
               <br>> 4 rue Alfred Kastler, 44300 Nantes, France.
               <br>> contact@galadesmines.com
               <br>
-              <br>RESEAUX SOCIAUX
-              <br>> <a href="//www.facebook.com/GalaDesMines2016">Facebook</a>
+              <br><u>RESEAUX SOCIAUX</u>
+              <br>> <a href="https://www.facebook.com/events/982653805179177/" class="facebook">Facebook</a>
             </p>
           </div>
         </div>
